fix error @johnnync13

--- a/AssignmentCode.ipynb
+++ b/AssignmentCode.ipynb
@@ -81,9 +81,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/qijunjin/anaconda3/lib/python3.7/site-packages/numpy/lib/arraysetops.py:568: FutureWarning: elementwise comparison failed; returning scalar instead, but in the future will perform elementwise comparison\n",
+      "  mask |= (ar1 == a)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(160112, 1) (251543, 4) (10215268, 3)\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -112,12 +128,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2970, 3)\n",
+      "71 1810\n"
+     ]
+    }
+   ],
    "source": [
     "if __name__ == '__main__':\n",
-    "    df_user_artists = original_df_user_artists[original_df_user_artists.userID < 1000]\n",
+    "    df_user_artists = original_df_user_artists[original_df_user_artists.userID < 100]\n",
     "    print(df_user_artists.shape)\n",
     "    print(len(df_user_artists['userID'].unique()), len(df_user_artists['musicbrainzID'].unique()))"
    ]
@@ -133,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,6 +178,7 @@
     "    :param df: DataFrame dels artistes\n",
     "    :return : Enter, nombre d'artistes\n",
     "    \"\"\"\n",
+    "    print(df.head())\n",
     "    return len(df.index)\n",
     "\n",
     "def get_users(df):\n",
@@ -162,7 +188,9 @@
     "    :params df: DataFrame df_user_artists\n",
     "    :return : Llista, tupla, pd.Series o indexos de pandas amb les ids\n",
     "    \"\"\"\n",
+    "    #return df.ix[:, -1].tolist()\n",
     "    return list(df.index)\n",
+    "\n",
     "\n",
     "def get_artits(df):\n",
     "    \"\"\"\n",
@@ -172,7 +200,6 @@
     "    :return : Llista, tupla, pd.Series o indexos de pandas amb les ids\n",
     "    \"\"\"\n",
     "    return list(df.index)\n",
-    "\n",
     "def total_reproductions(df):\n",
     "    \"\"\"\n",
     "    Retorna la quantitat de reproduccions totals guardades al dataframe\n",
@@ -180,14 +207,39 @@
     "    :params df: DataFrame df_user_artists\n",
     "    :return : Enter, nombre de reproduccions\n",
     "    \"\"\"\n",
-    "    return (len(df['plays']))"
+    "\n",
+    "    return (sum(df['plays']))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "IOPub data rate exceeded.\n",
+      "The notebook server will temporarily stop sending output\n",
+      "to the client in order to avoid crashing it.\n",
+      "To change this limit, set the config variable\n",
+      "`--NotebookApp.iopub_data_rate_limit`.\n",
+      "\n",
+      "Current values:\n",
+      "NotebookApp.iopub_data_rate_limit=1000000.0 (bytes/sec)\n",
+      "NotebookApp.rate_limit_window=3.0 (secs)\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total_reproductions: 2356118519\n"
+     ]
+    }
+   ],
    "source": [
     "if __name__ == '__main__':\n",
     "    print('count_users: {}'.format(count_users(original_df_users)))\n",
@@ -212,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +345,6 @@
     "    :param n: Quanitat d'usuaris\n",
     "    :return: Llista, tupla o pd.Series de userID dels n usuaris\n",
     "    \"\"\"\n",
-    "    \n",
     "    # Operate with the sparse matrix, convert to dense the result (as it has much fewer entries)\n",
     "    sums = to_dense(counts.sum(axis=1))\n",
     "    # Get indices\n",
@@ -308,21 +359,88 @@
     "    :param n: Quanitat d'artistes\n",
     "    :return: Llista, tupla o pd.Series de artistID dels n artistes\n",
     "    \"\"\"\n",
-    "    raise NotImplementedError()"
+    "    print(counts, indexes,columns, n)\n",
+    "    # Operate with the sparse matrix, convert to dense the result (as it has much fewer entries)\n",
+    "    sums = to_dense(counts.sum(axis=1))\n",
+    "    # Get indices\n",
+    "    indices = sums.argsort()\n",
+    "    return indexes.categories[indices[-n:]]\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(71, 1810)\n",
+      "Int64Index([23, 76, 19, 74, 1], dtype='int64')\n",
+      "  (0, 0)\t1099\n",
+      "  (0, 1)\t897\n",
+      "  (0, 2)\t717\n",
+      "  (0, 3)\t706\n",
+      "  (0, 4)\t691\n",
+      "  (0, 5)\t545\n",
+      "  (0, 6)\t507\n",
+      "  (0, 7)\t424\n",
+      "  (0, 8)\t403\n",
+      "  (0, 9)\t393\n",
+      "  (0, 10)\t387\n",
+      "  (0, 11)\t361\n",
+      "  (0, 12)\t358\n",
+      "  (0, 13)\t316\n",
+      "  (0, 14)\t310\n",
+      "  (0, 15)\t302\n",
+      "  (0, 16)\t288\n",
+      "  (0, 17)\t281\n",
+      "  (0, 18)\t244\n",
+      "  (0, 19)\t232\n",
+      "  (0, 20)\t231\n",
+      "  (0, 21)\t229\n",
+      "  (0, 22)\t227\n",
+      "  (0, 23)\t222\n",
+      "  (0, 24)\t220\n",
+      "  :\t:\n",
+      "  (70, 1414)\t17\n",
+      "  (70, 1418)\t16\n",
+      "  (70, 1421)\t30\n",
+      "  (70, 1424)\t107\n",
+      "  (70, 1426)\t23\n",
+      "  (70, 1439)\t56\n",
+      "  (70, 1508)\t42\n",
+      "  (70, 1792)\t169\n",
+      "  (70, 1793)\t104\n",
+      "  (70, 1794)\t101\n",
+      "  (70, 1795)\t99\n",
+      "  (70, 1796)\t68\n",
+      "  (70, 1797)\t31\n",
+      "  (70, 1798)\t28\n",
+      "  (70, 1799)\t27\n",
+      "  (70, 1800)\t23\n",
+      "  (70, 1801)\t23\n",
+      "  (70, 1802)\t20\n",
+      "  (70, 1803)\t18\n",
+      "  (70, 1804)\t18\n",
+      "  (70, 1805)\t17\n",
+      "  (70, 1806)\t17\n",
+      "  (70, 1807)\t16\n",
+      "  (70, 1808)\t15\n",
+      "  (70, 1809)\t15 category category 5\n",
+      "Int64Index([23, 76, 19, 74, 1], dtype='int64')\n"
+     ]
+    }
+   ],
    "source": [
     "if __name__ == '__main__':\n",
     "    counts, indexes, columns = build_counts_table(df_user_artists)\n",
     "    print(counts.shape)\n",
     "    \n",
-    "    count = get_count(counts, indexes, columns, 111, 3323)\n",
-    "    print(count)\n",
+    "    #count = get_count(counts, indexes, columns, 111, 3323)\n",
+    "    #print(count)\n",
     "    \n",
     "    top_users = top_active_users(counts, indexes, columns, 5)\n",
     "    print(top_users)\n",
