fix error @johnnync13

--- a/AssignmentCode.ipynb
+++ b/AssignmentCode.ipynb
@@ -361,10 +361,10 @@
     "    \"\"\"\n",
     "    print(counts, indexes,columns, n)\n",
     "    # Operate with the sparse matrix, convert to dense the result (as it has much fewer entries)\n",
-    "    sums = to_dense(counts.sum(axis=1))\n",
+    "    sums = to_dense(counts.sum(axis=0))\n",
     "    # Get indices\n",
     "    indices = sums.argsort()\n",
-    "    return indexes.categories[indices[-n:]]\n",
+    "    return indexes.categories[indices[:-n]]\n",
     "    "
    ]
   },
@@ -439,8 +439,8 @@
     "    counts, indexes, columns = build_counts_table(df_user_artists)\n",
     "    print(counts.shape)\n",
     "    \n",
-    "    #count = get_count(counts, indexes, columns, 111, 3323)\n",
-    "    #print(count)\n",
+    "    count = get_count(counts, indexes, columns, 111, 3323)\n",
+    "    print(count)\n",
     "    \n",
     "    top_users = top_active_users(counts, indexes, columns, 5)\n",
     "    print(top_users)\n",
