fix error @johnnync13

--- a/AssignmentCode.ipynb
+++ b/AssignmentCode.ipynb
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,18 +359,18 @@
     "    :param n: Quanitat d'artistes\n",
     "    :return: Llista, tupla o pd.Series de artistID dels n artistes\n",
     "    \"\"\"\n",
-    "    print(counts, indexes,columns, n)\n",
+    "\n",
     "    # Operate with the sparse matrix, convert to dense the result (as it has much fewer entries)\n",
-    "    sums = to_dense(counts.sum(axis=0))\n",
+    "    sums = to_dense(counts.sum(axis=1))\n",
     "    # Get indices\n",
     "    indices = sums.argsort()\n",
-    "    return indexes.categories[indices[:-n]]\n",
+    "    return columns.categories[indices[-n:]]\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -379,58 +379,7 @@
      "text": [
       "(71, 1810)\n",
       "Int64Index([23, 76, 19, 74, 1], dtype='int64')\n",
-      "  (0, 0)\t1099\n",
-      "  (0, 1)\t897\n",
-      "  (0, 2)\t717\n",
-      "  (0, 3)\t706\n",
-      "  (0, 4)\t691\n",
-      "  (0, 5)\t545\n",
-      "  (0, 6)\t507\n",
-      "  (0, 7)\t424\n",
-      "  (0, 8)\t403\n",
-      "  (0, 9)\t393\n",
-      "  (0, 10)\t387\n",
-      "  (0, 11)\t361\n",
-      "  (0, 12)\t358\n",
-      "  (0, 13)\t316\n",
-      "  (0, 14)\t310\n",
-      "  (0, 15)\t302\n",
-      "  (0, 16)\t288\n",
-      "  (0, 17)\t281\n",
-      "  (0, 18)\t244\n",
-      "  (0, 19)\t232\n",
-      "  (0, 20)\t231\n",
-      "  (0, 21)\t229\n",
-      "  (0, 22)\t227\n",
-      "  (0, 23)\t222\n",
-      "  (0, 24)\t220\n",
-      "  :\t:\n",
-      "  (70, 1414)\t17\n",
-      "  (70, 1418)\t16\n",
-      "  (70, 1421)\t30\n",
-      "  (70, 1424)\t107\n",
-      "  (70, 1426)\t23\n",
-      "  (70, 1439)\t56\n",
-      "  (70, 1508)\t42\n",
-      "  (70, 1792)\t169\n",
-      "  (70, 1793)\t104\n",
-      "  (70, 1794)\t101\n",
-      "  (70, 1795)\t99\n",
-      "  (70, 1796)\t68\n",
-      "  (70, 1797)\t31\n",
-      "  (70, 1798)\t28\n",
-      "  (70, 1799)\t27\n",
-      "  (70, 1800)\t23\n",
-      "  (70, 1801)\t23\n",
-      "  (70, 1802)\t20\n",
-      "  (70, 1803)\t18\n",
-      "  (70, 1804)\t18\n",
-      "  (70, 1805)\t17\n",
-      "  (70, 1806)\t17\n",
-      "  (70, 1807)\t16\n",
-      "  (70, 1808)\t15\n",
-      "  (70, 1809)\t15 category category 5\n",
-      "Int64Index([23, 76, 19, 74, 1], dtype='int64')\n"
+      "Int64Index([17, 59, 12, 58, 2], dtype='int64')\n"
      ]
     }
    ],
@@ -439,13 +388,14 @@
     "    counts, indexes, columns = build_counts_table(df_user_artists)\n",
     "    print(counts.shape)\n",
     "    \n",
-    "    count = get_count(counts, indexes, columns, 111, 3323)\n",
-    "    print(count)\n",
+    "    #count = get_count(counts, indexes, columns, 111, 3323)\n",
+    "    #print(count)\n",
     "    \n",
     "    top_users = top_active_users(counts, indexes, columns, 5)\n",
     "    print(top_users)\n",
     "    \n",
     "    top_artists = top_reproduced_artits(counts, indexes, columns, 5)\n",
+    "    #print(top_artists)\n",
     "    print(top_artists)"
    ]
   },
@@ -453,7 +403,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Mesurament de similituds\n",
+    "# Mesurament de similituds\n",
     "\n",
     "El primer pas per poder recomanar és definir una funció de similitud entre vectors. Siguin $x, y$ vectors, les següents són funcions típiques de similitud:\n",
     "\n",
