--- a/AssignmentCode.ipynb
+++ b/AssignmentCode.ipynb
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,13 +364,13 @@
     "    sums = to_dense(counts.sum(axis=1))\n",
     "    # Get indices\n",
     "    indices = sums.argsort()\n",
-    "    return columns.categories[indices[-n:]]\n",
+    "    return columns.categories[indices[n:]]\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +379,11 @@
      "text": [
       "(71, 1810)\n",
       "Int64Index([23, 76, 19, 74, 1], dtype='int64')\n",
-      "Int64Index([17, 59, 12, 58, 2], dtype='int64')\n"
+      "Int64Index([76, 45, 50, 69, 67, 18, 74, 51, 15, 61, 55, 25, 49, 22, 56, 78,  7,\n",
+      "            41, 24, 60, 20, 16, 46, 68, 71, 62, 52, 64, 30, 70, 77, 38, 57,  8,\n",
+      "            63, 34, 39, 10, 66, 48, 37, 23, 54,  9, 33, 26, 75, 31, 65,  5, 47,\n",
+      "            72, 35,  1, 21, 27, 32, 36,  6,  3, 11, 17, 59, 12, 58,  2],\n",
+      "           dtype='int64')\n"
      ]
     }
    ],
