--- a/AssignmentCode.ipynb
+++ b/AssignmentCode.ipynb
@@ -364,7 +364,7 @@
     "    #print(counts.sum(axis=0).shape)\n",
     "    #print((to_dense(counts.sum(axis=0))).argsort())\n",
     "    \n",
-    "    sums = to_dense(counts.sum(axis=0).argsort())\n",
+    "    sums = to_dense(counts.sum(axis=0))\n",
     "    #print(sums)\n",
     "    # Get indices\n",
     "    indices = sums.argsort()\n",
