--- a/AssignmentCode.ipynb
+++ b/AssignmentCode.ipynb
@@ -81,14 +81,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/qijunjin/anaconda3/lib/python3.7/site-packages/numpy/lib/arraysetops.py:568: FutureWarning: elementwise comparison failed; returning scalar instead, but in the future will perform elementwise comparison\n",
+      "/home/johnny/anaconda3/lib/python3.7/site-packages/numpy/lib/arraysetops.py:569: FutureWarning: elementwise comparison failed; returning scalar instead, but in the future will perform elementwise comparison\n",
       "  mask |= (ar1 == a)\n"
      ]
     },
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -552,14 +552,26 @@
     "    \n",
     "    if similarity_function is None:\n",
     "        \n",
-    "        x = counts\n",
-    "        y = counts.T\n",
+    "        x = to_dense(counts)\n",
+    "        y = to_dense(counts.T)\n",
     "        matrix_prod = np.dot(x,y)\n",
-    "        diagonal_x = x.diagonal()\n",
-    "        diagonal_y = y.diagonal()\n",
-    "        matrix = matrix_prod / (np.sqrt(diagonal_x) * np.sqrt(diagonal_y))  \n",
-    "        np.fill_diagonal(matrix, 0)\n",
-    "        return matrix\n",
+    "        \n",
+    "        \"\"\" MALA SOLUCION,siempre hay divisiones entre 0 \n",
+    "        variable = np.nan_to_num((np.sqrt(diagonal_x)) * (np.sqrt(diagonal_y)))\n",
+    "        print(variable)\n",
+    "        matrix = np.around((matrix_prod/variable), decimals=5)\n",
+    "        np.fill_diagonal(matrix, 0)\"\"\"\n",
+    "        \n",
+    "        diagonal = np.diag(matrix_prod)\n",
+    "        inversa = 1 / diagonal\n",
+    "        inversa[np.isinf(inversa)] = 0\n",
+    "        inv_mag = np.sqrt(inversa)\n",
+    "        cosine = matrix_prod * inv_mag\n",
+    "        cosine = cosine.T * inv_mag\n",
+    "        np.fill_diagonal(cosine, 0)\n",
+    "        print(cosine)\n",
+    "        print(cosine.shape)\n",
+    "        return cosine\n",
     "    else: \n",
     "        n = counts.shape[0] # Resp. [1] per items\n",
     "        matrix = dok_matrix((n, n)) # Empty matrix, needs to be filled\n",
@@ -576,11 +588,10 @@
     "                #else: \n",
     "                    #matrix[i,j] = matrix[j,i]\n",
     "        \"\"\"\n",
-    "        for i in range(n):\n",
+    "        for i in tqdm_notebook(range(n)):\n",
     "            matrix [i,i] = 0.\n",
-    "            for j in range(i+1, n):\n",
-    "                matrix[j,i] = similarity(to_dense(counts[i]), to_dense(counts[j]))\n",
-    "                    \n",
+    "            for j in tqdm_notebook(range(i+1, n)):\n",
+    "                matrix[i,j] = similarity(to_dense(counts[i]), to_dense(counts[j]))                    \n",
     "        return matrix"
    ]
   },
@@ -596,19 +607,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 97,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/qijunjin/anaconda3/lib/python3.7/site-packages/scipy/sparse/base.py:596: RuntimeWarning: divide by zero encountered in true_divide\n",
-      "  return np.true_divide(self.todense(), other)\n",
-      "/Users/qijunjin/anaconda3/lib/python3.7/site-packages/scipy/sparse/base.py:596: RuntimeWarning: invalid value encountered in true_divide\n",
-      "  return np.true_divide(self.todense(), other)\n"
+      "(707, 707)\n"
      ]
     }
    ],
@@ -668,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -699,22 +707,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NotImplementedError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNotImplementedError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-18-318a0cdcf63f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0m__name__\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'__main__'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mscore\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcounts\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindexes\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcolumns\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msimilarities\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m111\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m123\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-17-3d6fca471eca>\u001b[0m in \u001b[0;36mscore\u001b[0;34m(counts, indexes, columns, similarities, user, item)\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m     \"\"\"\n\u001b[0;32m---> 23\u001b[0;31m     \u001b[0;32mraise\u001b[0m \u001b[0mNotImplementedError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNotImplementedError\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if __name__ == '__main__':\n",
     "    print(score(counts, indexes, columns, similarities, 111, 123))"
@@ -863,7 +858,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
