--- a/AssignmentCode.ipynb
+++ b/AssignmentCode.ipynb
@@ -588,9 +588,9 @@
     "                #else: \n",
     "                    #matrix[i,j] = matrix[j,i]\n",
     "        \"\"\"\n",
-    "        for i in tqdm_notebook(range(n)):\n",
+    "        for i in range(n):\n",
     "            matrix [i,i] = 0.\n",
-    "            for j in tqdm_notebook(range(i+1, n)):\n",
+    "            for j in range(i+1, n):\n",
     "                matrix[i,j] = similarity(to_dense(counts[i]), to_dense(counts[j]))                    \n",
     "        return matrix"
    ]
